--- a/public/partials/footer.hbs
+++ b/public/partials/footer.hbs
@@ -14,7 +14,7 @@
     <div class="col-xs-12 col-sm-6 col-md-3">
   <div class="widget subscribe no-box">
   <h5 class="widget-title">ABOUT <span></span></h5>
-  <p>This website is made by Anubhav Gupta, Kishan Kumar and Pranjali Priya to help people during COVID19. </p>
+  <p>This website is made by <a href="https://www.linkedin.com/in/anubhav-gupta-841aa7184/">Anubhav Gupta</a>, <a href="https://www.linkedin.com/in/kishan-kumar-73a007185/">Kishan Kumar</a> and <a href="https://www.linkedin.com/in/pranjalipriya/">Pranjali Priya</a> to help people during COVID19. </p>
   </div>
   </div>
   
