--- a/public/view/statehospital.hbs
+++ b/public/view/statehospital.hbs
@@ -60,81 +60,53 @@ section::after {
   <h2>State Government Hospitals</h2>
  
 </header>
+
 <section>
+  
+  
   <article>
-    <div class="content">
-          <p>You can call the Call centre at the Hospital / District / State level to
+    <h1> <p>You can call the Call centre at the Hospital / District / State level to
         know the availability of beds and ventilators before proceeding to the hospitals concerned
         for their requirement.</p><p> Central Helpline Number for corona-virus: - +91-11-23978046</p>
-         <p> Toll Free - 1075</p>
-    </div>
-    <div class="row">
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p> <a href="https://dhs.andaman.gov.in/NewEvents/249.jpeg"><h3>1. Andaman & Nicobar :</h3></a> 03192-232102</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p><a href="http://hmfw.ap.gov.in/COVID-19%20IEC/COVID-19%20Hospitals.pdf"><h3>2. Andhra Pradesh :</h3></a>0866-2410978</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p><a href="http://nrhmarunachal.gov.in/covid_19_IEC.html"><h3>3. Arunachal Pradesh :</h3></a> 9436055743</p></div>
+                  <p> Toll Free - 1075</p></h1>
 
-    <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p><a href="https://nhm.assam.gov.in/portlet-innerpage/dedicated-covid-hospitals"><h3>4. Assam  :</h3></a>6913347770</p></div>
-
-  </div>
-      <div class="row">
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p> <a href="http://statehealthsocietybihar.org/"><h3>5. Bihar :</h3></a>104</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p><a href="http://chdcovid19.in/"><h3>6. Chandigarh :</h3></a>  9779558282</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p><a href="http://cghealth.nic.in/cghealth17/"><h3>7. Chhattisgarh  :</h3></a>104 </p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p>
-        <a href="http://dnh.nic.in/Docs/COVID19/COVID19Health_Fac08052020.pdf"><h3>8. Daman and Diu :</h3></a> 104</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="https://coronabeds.jantasamvad.org/"><h3>9. Delhi  :</h3></a>011-22307145</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p> <a href="https://nhm.goa.gov.in/corona-virus-important-links-iec/"><h3>10. Goa  :</h3></a>104 </p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p>        <a href="https://nrhm.gujarat.gov.in/cir-noti-covid-19.htm"><h3>11. Gujarat  :</h3></a>104</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p>        <a href="http://nhmharyana.gov.in/page.aspx?id=208"><h3>12. Haryana  :</h3></a>8558893911 </p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="http://www.nrhmhp.gov.in/content/covid-health-facilities"><h3>13.  Himachal Pradesh :</h3></a>104</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p> <a href="https://www.jknhm.com/covidfacilities.php"><h3>14. Jammu and Kashmir :</h3></a>  01912520982, 0194-2440283 </p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p><a href="http://jrhms.jharkhand.gov.in/FileUploaded%20By%20User/DCovid_Hospitals.pdf"><h3>15. Jharkhand :</h3></a>104</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p>
-        <a href="https://karunadu.karnataka.gov.in/hfw/nhm/pages/home.aspx"><h3>16. Karnataka  :</h3></a>104</p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="http://arogyakeralam.gov.in/2020/03/25/guidelines/"><h3>17. Kerala  :</h3></a>0471-2552056</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="https://leh.nic.in/notice/covid19-hospital/"><h3>18. Ladakh  :</h3></a>01982256462</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p> <a href="https://cdn.s3waas.gov.in/s358238e9ae2dd305d79c2ebc8c1883422/uploads/2020/05/2020051228-1.pdf"><h3>19. Lakshadweep :</h3></a>104</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p> <a href="http://health.mp.gov.in/en"><h3>20. Madhya Pradesh :</h3></a>104</p></div>
-  </div>
-    <div class="row">
-        <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="https://arogya.maharashtra.gov.in/1177/Dedicat
-            ed-COVID-Facilities-Status"><h3>21. Maharashtra :</h3></a>020-26127394</p></div>
-        <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="http://nrhmmanipur.org/?page_id=2602"><h3>22. Manipur :</h3></a>3852411668</p></div>
-        <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p><a href="http://meghalayaonline.gov.in/covid/images/materials/hospitals.pdf"><h3>23. Meghalaya :</h3></a>108</p></div>
-        <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p>     <a href="http://nhmmizoram.org/page?id=202"><h3>24. Mizoram  :</h3></a>102 </p></div>
-  </div>
-  <div class="row">
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="http://nhmnagaland.in/Notification_file_path/Dedicated%20COVID%20Hospitals%20in%20Nagaland.pdf"><h3>25. Nagaland  :</h3></a>7005539653</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="https://statedashboard.odisha.gov.in/"><h3>26. Odisha  :</h3></a>9439994859</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p> <a href="https://health.py.gov.in/sites/default/files/NEET-PDF/Categorisation%20of%20covid%20facilities.pdf"><h3>27. Puducherry :</h3></a>104</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p><a href="http://pbhealth.gov.in/"><h3>28. Punjab :</h3></a> 104 </p></div>
-</div>
-
-    <div class="row">
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="http://rajswasthya.nic.in/PDF/COvid%20Facility%20Rajasthan.pdf"><h3>29. Rajasthan  :</h3></a>0141-2225624</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="https://www.covid19sikkim.org/"><h3>30. Sikkim :</h3></a>104</p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p>        <a href="https://stopcorona.tn.gov.in/%e0%ae%ae%e0%af%81%e0%ae%95%e0%af%8d%e0%ae%95%e0%ae%bf%e0%ae%af-%e0%ae%a4%e0%ae%95%e0%ae%b5%e0%ae%b2%e0%af%8d%e0%ae%95%e0%ae%b3%e0%af%8d/"><h3>31. Tamil Nadu  :</h3></a>044-29510500 </p></div>
-    <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p><a href="https://www.chfw.telangana.gov.in/covid_hospitals.html"><h3>32. Telangana :</h3></a> 104</p> </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="http://tripuranrhm.gov.in/home/0905202001.pdf"><h3>33. Tripura :</h3></a>0381-2315879</p></div>
-        <div class="col-xs-3 col-md-3" style="background-color: rgb(230, 230, 250);"> <p><a href="https://updgmh-covid19.maps.arcgis.com/apps/opsdashboard/index.html#/bfc888151feb48928a4f6885ca20e83c"><h3>34. Uttar Pradesh :</h3></a> 18001805145</p></div>
-        <div class="col-xs-3 col-md-3" style="background-color:rgb(230, 230, 250);"><p><a href="https://health.uk.gov.in/pages/view/102-dedicated-covid-facilities-in-state"><h3>35. Uttarakhand :</h3></a>104</p></div>
-        <div class="col-xs-3 col-md-3" style="background-color:lavender;"><p>      <a href="https://www.wbhealth.gov.in/uploaded_files/corona/Notification___Revised___67_Covid_Hospital___30.04_.2020_.pdf"><h3>36. West Bengal :</h3></a>1800313444222, 03323412600</p> </div>
-
-    </div>
+    <p> <a href="https://dhs.andaman.gov.in/NewEvents/249.jpeg"><h5>1. Andaman & Nicobar Islands  :</h5></a> 03192-232102
+        <a href="http://hmfw.ap.gov.in/COVID-19%20IEC/COVID-19%20Hospitals.pdf"><h5>2. Andhra Pradesh  :</h5></a>0866-2410978
+        <a href="http://nrhmarunachal.gov.in/covid_19_IEC.html"><h5>3. Arunachal Pradesh :</h5></a> 9436055743 
+        <a href="https://nhm.assam.gov.in/portlet-innerpage/dedicated-covid-hospitals"><h5>4. Assam  :</h5></a>6913347770 
+        <a href="http://statehealthsocietybihar.org/"><h5>5. Bihar :</h5></a>104
+        <a href="http://chdcovid19.in/"><h5>6. Chandigarh :</h5></a>  9779558282
+        <a href="http://cghealth.nic.in/cghealth17/"><h5>7. Chhattisgarh  :</h5></a>104 
+        <a href="http://dnh.nic.in/Docs/COVID19/COVID19Health_Fac08052020.pdf"><h5>8. Dadra and Nagar Haveli and Daman and Diu  :</h5></a> 104 
+        <a href="https://coronabeds.jantasamvad.org/"><h5>9. Delhi  :</h5></a>011-22307145
+        <a href="https://nhm.goa.gov.in/corona-virus-important-links-iec/"><h5>10. Goa  :</h5></a>104 
+        <a href="https://nrhm.gujarat.gov.in/cir-noti-covid-19.htm"><h5>11. Gujarat  :</h5></a>104
+        <a href="http://nhmharyana.gov.in/page.aspx?id=208"><h5>12. Haryana  :</h5></a>8558893911 
+        <a href="http://www.nrhmhp.gov.in/content/covid-health-facilities"><h5>13.  Himachal Pradesh :</h5></a>104  
+        <a href="https://www.jknhm.com/covidfacilities.php"><h5>14. Jammu and Kashmir :</h5></a>  01912520982, 0194-2440283 
+        <a href="http://jrhms.jharkhand.gov.in/FileUploaded%20By%20User/DCovid_Hospitals.pdf"><h5>15. Jharkhand :</h5></a>104 
+        <a href="https://karunadu.karnataka.gov.in/hfw/nhm/pages/home.aspx"><h5>16. Karnataka  :</h5></a>104  
+        <a href="http://arogyakeralam.gov.in/2020/03/25/guidelines/"><h5>17. Kerala  :</h5></a>0471-2552056
+        <a href="https://leh.nic.in/notice/covid19-hospital/"><h5>18. Ladakh  :</h5></a>01982256462 
+        <a href="https://cdn.s3waas.gov.in/s358238e9ae2dd305d79c2ebc8c1883422/uploads/2020/05/2020051228-1.pdf"><h5>19. Lakshadweep :</h5></a>104
+        <a href="http://health.mp.gov.in/en"><h5>20. Madhya Pradesh :</h5></a>104
+        <a href="https://arogya.maharashtra.gov.in/1177/Dedicat
+        ed-COVID-Facilities-Status"><h5>21. Maharashtra :</h5></a>020-26127394 
+        <a href="http://nrhmmanipur.org/?page_id=2602"><h5>22. Manipur :</h5></a>3852411668
+        <a href="http://meghalayaonline.gov.in/covid/images/materials/hospitals.pdf"><h5>23. Meghalaya :</h5></a>108
+        <a href="http://nhmmizoram.org/page?id=202"><h5>24. Mizoram  :</h5></a>102 
+        <a href="http://nhmnagaland.in/Notification_file_path/Dedicated%20COVID%20Hospitals%20in%20Nagaland.pdf"><h5>25. Nagaland  :</h5></a>7005539653
+        <a href="https://statedashboard.odisha.gov.in/"><h5>26. Odisha  :</h5></a>9439994859
+        <a href="https://health.py.gov.in/sites/default/files/NEET-PDF/Categorisation%20of%20covid%20facilities.pdf"><h5>27. Puducherry :</h5></a>104
+        <a href="http://pbhealth.gov.in/"><h5>28. Punjab :</h5></a> 104 
+        <a href="http://rajswasthya.nic.in/PDF/COvid%20Facility%20Rajasthan.pdf"><h5>29. Rajasthan  :</h5></a>0141-2225624 
+        <a href="https://www.covid19sikkim.org/"><h5>30. Sikkim :</h5></a>104
+        <a href="https://stopcorona.tn.gov.in/%e0%ae%ae%e0%af%81%e0%ae%95%e0%af%8d%e0%ae%95%e0%ae%bf%e0%ae%af-%e0%ae%a4%e0%ae%95%e0%ae%b5%e0%ae%b2%e0%af%8d%e0%ae%95%e0%ae%b3%e0%af%8d/"><h5>31. Tamil Nadu  :</h5></a>044-29510500 
+        <a href="https://www.chfw.telangana.gov.in/covid_hospitals.html"><h5>32. Telangana :</h5></a> 104 
+        <a href="http://tripuranrhm.gov.in/home/0905202001.pdf"><h5>33. Tripura :</h5></a>0381-2315879
+        <a href="https://updgmh-covid19.maps.arcgis.com/apps/opsdashboard/index.html#/bfc888151feb48928a4f6885ca20e83c"><h5>34. Uttar Pradesh :</h5></a> 18001805145
+        <a href="https://health.uk.gov.in/pages/view/102-dedicated-covid-facilities-in-state"><h5>35. Uttarakhand :</h5></a>104 
+        <a href="https://www.wbhealth.gov.in/uploaded_files/corona/Notification___Revised___67_Covid_Hospital___30.04_.2020_.pdf"><h5>36. West Bengal :</h5></a>1800313444222, 03323412600</p>
   </article>
 </section>
 
